# example-boost-signals2

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
example/: CMakeLists.txt
example/app/: CMakeLists.txt
example/app/src/: main.cpp
example/utilities/: CMakeLists.txt
example/utilities/include/utilities/: Receiver.h  Sender.h
example/utilities/src/: Receiver.cpp  Sender.cpp
test/unit/: CMakeLists.txt
test/unit/utilities/src/: CMakeLists.txt  TestReceiver.cpp  TestSender.cpp  main.cpp
